--- a/app/ui/main.ui
+++ b/app/ui/main.ui
@@ -1051,7 +1051,17 @@ QPushButton:disabled {
               </widget>
              </item>
              <item>
-              <widget class="QTableWidget" name="tbl_DIO_drives"/>
+              <widget class="QTableWidget" name="tbl_DIO_drives">
+               <property name="selectionMode">
+                <enum>QAbstractItemView::NoSelection</enum>
+               </property>
+               <property name="selectionBehavior">
+                <enum>QAbstractItemView::SelectRows</enum>
+               </property>
+               <attribute name="verticalHeaderVisible">
+                <bool>false</bool>
+               </attribute>
+              </widget>
              </item>
             </layout>
            </item>
@@ -1107,6 +1117,7 @@ QPushButton:disabled {
  </widget>
  <resources>
   <include location="../resources/images/resources.qrc"/>
+  <include location="../../../../../../Users/itbri2752/.designer/resources/images/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
